; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_mes_v10_1.c_mes_v10_1_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_mes_v10_1.c_mes_v10_1_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdgpu_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@GC = common dso_local global i32 0, align 4
@mmCP_MES_CNTL = common dso_local global i32 0, align 4
@CP_MES_CNTL = common dso_local global i32 0, align 4
@MES_PIPE0_RESET = common dso_local global i32 0, align 4
@mmCP_MES_PRGRM_CNTR_START = common dso_local global i32 0, align 4
@mmCP_MES_DC_OP_CNTL = common dso_local global i32 0, align 4
@CP_MES_DC_OP_CNTL = common dso_local global i32 0, align 4
@BYPASS_UNCACHED = common dso_local global i32 0, align 4
@MES_PIPE0_ACTIVE = common dso_local global i32 0, align 4
@MES_INVALIDATE_ICACHE = common dso_local global i32 0, align 4
@MES_HALT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.amdgpu_device*, i32)* @mes_v10_1_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mes_v10_1_enable(%struct.amdgpu_device* %0, i32 %1) #0 {
  %3 = alloca %struct.amdgpu_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.amdgpu_device* %0, %struct.amdgpu_device** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %47

8:                                                ; preds = %2
  %9 = load i32, i32* @GC, align 4
  %10 = load i32, i32* @mmCP_MES_CNTL, align 4
  %11 = call i32 @RREG32_SOC15(i32 %9, i32 0, i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @CP_MES_CNTL, align 4
  %14 = load i32, i32* @MES_PIPE0_RESET, align 4
  %15 = call i32 @REG_SET_FIELD(i32 %12, i32 %13, i32 %14, i32 1)
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* @GC, align 4
  %17 = load i32, i32* @mmCP_MES_CNTL, align 4
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @WREG32_SOC15(i32 %16, i32 0, i32 %17, i32 %18)
  %20 = load i32, i32* @GC, align 4
  %21 = load i32, i32* @mmCP_MES_PRGRM_CNTR_START, align 4
  %22 = load %struct.amdgpu_device*, %struct.amdgpu_device** %3, align 8
  %23 = getelementptr inbounds %struct.amdgpu_device, %struct.amdgpu_device* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = trunc i64 %25 to i32
  %27 = ashr i32 %26, 2
  %28 = call i32 @WREG32_SOC15(i32 %20, i32 0, i32 %21, i32 %27)
  %29 = load i32, i32* @GC, align 4
  %30 = load i32, i32* @mmCP_MES_DC_OP_CNTL, align 4
  %31 = call i32 @RREG32_SOC15(i32 %29, i32 0, i32 %30)
  store i32 %31, i32* %5, align 4
  %32 = load i32, i32* %5, align 4
  %33 = load i32, i32* @CP_MES_DC_OP_CNTL, align 4
  %34 = load i32, i32* @BYPASS_UNCACHED, align 4
  %35 = call i32 @REG_SET_FIELD(i32 %32, i32 %33, i32 %34, i32 0)
  store i32 %35, i32* %5, align 4
  %36 = load i32, i32* @GC, align 4
  %37 = load i32, i32* @mmCP_MES_DC_OP_CNTL, align 4
  %38 = load i32, i32* %5, align 4
  %39 = call i32 @WREG32_SOC15(i32 %36, i32 0, i32 %37, i32 %38)
  %40 = load i32, i32* @CP_MES_CNTL, align 4
  %41 = load i32, i32* @MES_PIPE0_ACTIVE, align 4
  %42 = call i32 @REG_SET_FIELD(i32 0, i32 %40, i32 %41, i32 1)
  store i32 %42, i32* %5, align 4
  %43 = load i32, i32* @GC, align 4
  %44 = load i32, i32* @mmCP_MES_CNTL, align 4
  %45 = load i32, i32* %5, align 4
  %46 = call i32 @WREG32_SOC15(i32 %43, i32 0, i32 %44, i32 %45)
  br label %71

47:                                               ; preds = %2
  %48 = load i32, i32* @GC, align 4
  %49 = load i32, i32* @mmCP_MES_CNTL, align 4
  %50 = call i32 @RREG32_SOC15(i32 %48, i32 0, i32 %49)
  store i32 %50, i32* %5, align 4
  %51 = load i32, i32* %5, align 4
  %52 = load i32, i32* @CP_MES_CNTL, align 4
  %53 = load i32, i32* @MES_PIPE0_ACTIVE, align 4
  %54 = call i32 @REG_SET_FIELD(i32 %51, i32 %52, i32 %53, i32 0)
  store i32 %54, i32* %5, align 4
  %55 = load i32, i32* %5, align 4
  %56 = load i32, i32* @CP_MES_CNTL, align 4
  %57 = load i32, i32* @MES_INVALIDATE_ICACHE, align 4
  %58 = call i32 @REG_SET_FIELD(i32 %55, i32 %56, i32 %57, i32 1)
  store i32 %58, i32* %5, align 4
  %59 = load i32, i32* %5, align 4
  %60 = load i32, i32* @CP_MES_CNTL, align 4
  %61 = load i32, i32* @MES_PIPE0_RESET, align 4
  %62 = call i32 @REG_SET_FIELD(i32 %59, i32 %60, i32 %61, i32 1)
  store i32 %62, i32* %5, align 4
  %63 = load i32, i32* %5, align 4
  %64 = load i32, i32* @CP_MES_CNTL, align 4
  %65 = load i32, i32* @MES_HALT, align 4
  %66 = call i32 @REG_SET_FIELD(i32 %63, i32 %64, i32 %65, i32 1)
  store i32 %66, i32* %5, align 4
  %67 = load i32, i32* @GC, align 4
  %68 = load i32, i32* @mmCP_MES_CNTL, align 4
  %69 = load i32, i32* %5, align 4
  %70 = call i32 @WREG32_SOC15(i32 %67, i32 0, i32 %68, i32 %69)
  br label %71

71:                                               ; preds = %47, %8
  ret void
}

declare dso_local i32 @RREG32_SOC15(i32, i32, i32) #1

declare dso_local i32 @REG_SET_FIELD(i32, i32, i32, i32) #1

declare dso_local i32 @WREG32_SOC15(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
